// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render Checkbox 1`] = `
<label
  className="sc-AxgMl bIndAK"
>
  <input
    checked={false}
    className="sc-AxirZ cUxUGs"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-AxiKw eyxfax"
  />
  <span
    className="sc-AxhUy hvAUob"
  >
    
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with checked prop 1`] = `
<label
  className="sc-AxgMl bIndAK"
>
  <input
    checked={true}
    className="sc-AxirZ cUxUGs"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="sc-AxiKw EdcCz"
  >
    <span
      className="sc-AxhCb ljccpJ sc-AxjAm jnaJRY lni lni-checkmark"
    />
  </div>
  <span
    className="sc-AxhUy hvAUob"
  >
    
  </span>
</label>
`;
